<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="4">

        <Button
            android:id="@+id/button1"
            android:onClick="playAudio"
            android:tag="doyouspeakenglish"
            android:text="@string/phrase_1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button2"
            android:onClick="playAudio"
            android:tag="goodevening"
            android:text="@string/phrase_2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button3"
            android:onClick="playAudio"
            android:tag="hello"
            android:text="@string/phrase_3"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button4"
            android:onClick="playAudio"
            android:tag="howareyou"
            android:text="@string/phrase_4"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button5"
            android:onClick="playAudio"
            android:tag="ilivein"
            android:text="@string/phrase_5"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button6"
            android:onClick="playAudio"
            android:tag="mynameis"
            android:text="@string/phrase_6"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button7"
            android:onClick="playAudio"
            android:tag="please"
            android:text="@string/phrase_7"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button8"
            android:onClick="playAudio"
            android:tag="welcome"
            android:text="@string/phrase_8"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>